--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,7 @@
             "args": [
                 "-g",
                 "${workspaceFolder}/src/main.cpp",
+                "${workspaceFolder}/src/shader.cpp",
                 "-o",
                 "${workspaceFolder}/output",
                 "-lGL",
